--- a/docs/ESA2019-Speed-Data-Science-Activity.Rmd
+++ b/docs/ESA2019-Speed-Data-Science-Activity.Rmd
@@ -50,3 +50,8 @@ After each group has worked on a set of visualizations and assessment of their p
 
 * Students should be introduced to different ways to convey quantitative and categorical data. These could include bar plots, scatter plots, histograms, and box plots.
 * Students should be introduced to how information is summarized and conveyed by a data visualization.
+
+### Assessment
+
+* Did each group come up with visualizations that were useful at summarizing and conveying information?
+* Did students evaluate their peers work in a way that conveys understanding of different ways to visualize data? (Use [peer-eval.docx](docs/peer-eval.docx) tool.)
