--- a/docs/ESA2019-Speed-Data-Science-Activity.Rmd
+++ b/docs/ESA2019-Speed-Data-Science-Activity.Rmd
@@ -54,4 +54,4 @@ After each group has worked on a set of visualizations and assessment of their p
 ### Assessment
 
 * Did each group come up with visualizations that were useful at summarizing and conveying information?
-* Did students evaluate their peers work in a way that conveys understanding of different ways to visualize data? (Use [peer-eval.docx](peer-eval.docx) tool.)
+* Did students evaluate their peers work in a way that conveys understanding of different ways to visualize data? (Use [peer-eval.docx](https://mlammens.github.io/ESA2019-BEDENet/blob/gh-pages/docs/peer-eval.docx) tool.)
