--- a/docs/ESA2019-Intro-to-RStudio.Rmd
+++ b/docs/ESA2019-Intro-to-RStudio.Rmd
@@ -56,6 +56,13 @@ Using the R Console:
 setwd("/Users/maiellolammens/ESA-2019-DataSci/")
 ```
 
+### Making an R Project
+
+Let's make a new R Project associated with your ESA-2019-DataSci directory. 
+It will become more clear why we are doing this later when we get to the Git lesson.
+To make a new project, got to the upper right-hand side of the RStudio interface, where it says **Project: (None)**.
+Click the little downward arrow, select "New Project", then select "Existing Directory" from the window that pops up. 
+Use the graphical user interface (GUI) to navigate to the ESA-2019-DataSci directory, then select "Create Project".
 
 ### Getting help
 
@@ -499,7 +506,7 @@ This lesson utilizes **live coding**.
 While the learners should be made aware of the existence of this document, both the instructor and the learner should work on all coding as if this document was being created from scratch.
 Also, the instructor and students should both be working in a new *.R script file.
 
-## Learning Outcomes
+### Learning Outcomes
 
 At the end of this session you should be able to:
 
@@ -508,13 +515,13 @@ At the end of this session you should be able to:
 * Create an R script file and use it to document a sequence of R functions
 * Read in a data set and perform basic data summary procedures in R
 
-## Assessment
+### Assessment
 
 Assessment for live coding is based on the learners performance on successfully carrying out **Challenges**. 
 This is primarily a **formative assessment**. 
 A **summative assessment** could be incorporated as an in-class analysis lab or as part of a homework assignment.
 
-## Learning Activities
+### Learning Activities
 
 Live-coding using a data set relevant to the course content. In this case, these data could be associated with a Plant Ecology course or an undergraduate research course.
 
